# 
#  Copyright 
# 

SET(EXECUTABLE_NAME test${PROJECT_NAME})

ADD_DEFINITIONS(-DDEBUG=2)

ADD_EXECUTABLE(${EXECUTABLE_NAME}
  main.cc
  LLVC-test.cc)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

LINK_DIRECTORIES(${${PROJECT_NAME}_BINARY_DIR}/src)
TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME}
  LLVC)
